# wmd

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  deploysecret.sh  fly.toml  todo.md  tpyo.example.toml  wmd.example.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  check.yaml  check.yml  dependabot.yaml  dependabot.yml
docs/: end-user-manual.md  manual.md  release-procedure.md
hs/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml  todo.md  wmd.cabal
hs/app/: Main.hs
hs/src/: Config.hs  Lib.hs  Wmd.hs
hs/src/Http/: Handlers.hs  Server.hs
hs/src/Wmd/: App.hs  Cli.hs  Config.hs  HTML.hs  HTTPServer.hs  Html.hs  HttpServer.hs  PercentEncoding.hs  SearchQuery.hs  TargetURLFactory.hs  TargetURLMaker.hs  TargetUrl.hs  Types.hs
hs/src/Wmd/Config/: Parser.hs  Type.hs
hs/src/Wmd/Type/: Result.hs  SearchQuery.hs  SearchTarget.hs  Url.hs
hs/test/: Main.hs  Test.hs
hs/test/Test/Wmd/: ConfigTest.hs  PercentEncoding.hs  SearchQuery.hs
hs/test/Wmd/Test/: HttpServerTest.hs  PercentEncodingTest.hs  SearchQueryTest.hs
hs/test/Wmd/Test/goldens/: HttpServerTest_get__prefixes.golden
src/: app.rs  cli.rs  command_processing.rs  config.rs  http_server.rs  lib.rs  main.rs  percent_encoding.rs  ripm.rs  search_query.rs  search_targets.rs  server.rs  target_url_maker.rs  templating.rs  url_maker.rs  url_template.rs
src/http/: env.rs  handlers.rs  mod.rs  server.rs
templates/: home_page.html.hbs  opensearch.xml.hbs  prefixes_page.html.hbs
tests/: cli.rs  http_server.rs
tests/snapshots/: http_server__get_index.snap  http_server__get_index_with_param.snap  http_server__get_opensearch_xml.snap  http_server__get_prefixes.snap  http_server__get_robots_txt.snap
