[package]
name = "wmd"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
argh = "0.1"
async-trait = "0.1"
base64 = "0.13"
indoc = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = { version = "0.1" }
tracing-subscriber = "0.2"
url = { version = "2", features = ["serde"] }
warp = "0.3"

[dev-dependencies]
assert_cmd = "2"
pretty_assertions = "1.0"
rand = "0.8"
reqwest = "0.11"
tempfile = "3"
