[package]
name = "wmd"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
base64 = "0.13"
indoc = "1.0"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.7", features = ["full"] }
toml = "0.5"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }
warp = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.2"
rand = "0.8"
reqwest = "0.11"
tempfile = "3.3"
