[package]
name = "wmd"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.5"
axum-macros = "0.2"
base64 = "0.13"
clap = { version = "3.1", default-features = false, features = [
  "std",
  "derive",
  "cargo",
] }
futures = "0.3"
handlebars = { version = "4.2", features = ["rust-embed"] }
http = "=0.2.7"
mime = "0.3"
once_cell = "1.11"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.7", features = ["full"] }
toml = "0.5"
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1.9"
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
getport = { git = "https://github.com/kafji/getport", tag = "v0.3.0" }
insta = "1.14"
reqwest = "0.11"
tempfile = "3.3"
